--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 id="text">Odin Recipes</h1>
+    
+    <iframe id=gif src="https://giphy.com/embed/MIF9J7C8fMLLhZ0A4T" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/mrnigelng-cooking-show-uncle-roger-MIF9J7C8fMLLhZ0A4T"></a></p>
+
+    <h2 id="text">Will Uncle Roger Approve!?</h2>
+
     <ul>
         <Li><a href="recipes/fresh-spring-rolls.html">Tofu Fresh Spring Rolls</a></Li>
         <li><a href="recipes/fried-rice.html">Spam Fried Rice</a></li>
